Prevent scrollbar from appearing unless content overflows

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,6 +12,7 @@ body {
 	font: $body-font;
 	margin: 0 auto;
 	width: 60%;
+	overflow: hidden;
 }
 
 header {
