--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,7 @@
 @import "base";
 
 .content {
+	margin: 0;
 	color: $text-color;
 	h1, h2 {
 		color: $header-color;
@@ -17,6 +18,7 @@
 		right: 5%;
 		top: 50px;
 	}
+	overflow: scroll;
 }
 
 #site-header {
